fixed alignment of scroll down message

--- a/recipe-sharing-platform/src/App.css
+++ b/recipe-sharing-platform/src/App.css
@@ -75,7 +75,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-content: flex-start;
+  align-self: center;
 }
 
 .grid-container {
